Fixed ugly jumping

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ a {
 
 .top {
   height: 200px;
+  margin-bottom: 40px;
 }
 
 .cd-intro {
